--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,5 @@ script:
 - git clone https://github.com/SpeciesFileGroup/taxonworks.git
 - cd taxonworks
 - docker-compose build
+- echo "$DOCKER_PASSWORD" > docker login -u "$DOCKER_USERNAME" --password-stdin 
+- docker push taxonworks:dev
