--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -5,7 +5,11 @@ on:
       - test-instructions
 jobs:
   install:
-    runs-on: macos-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-11.0, macos-10.15]
+
     steps:
     - name: Install RVM
       run: curl -sSL https://get.rvm.io | bash
@@ -18,6 +22,8 @@ jobs:
     - name: Install Node.js
       run: brew install node
     - name: Checkout TaxonWorks source code
-      run: git clone https://github.com/SpeciesFileGroup/taxonworks.git && cd taxonworks
+      run: git clone https://github.com/SpeciesFileGroup/taxonworks.git .
     - name: Install required ruby version
       run: rvm install $(cat .ruby-version) && cd . && ruby -v
+    - name: Check ruby again
+      run: ruby -v
