--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -15,7 +15,7 @@ jobs:
       run: |
         set -x
         brew services list
-        brew services restart postgresql
+        brew services restart -vvv postgresql
         createuser -s -d -w taxonworks_development # Replaced -P with -w since prompt cannot be answered in this context
         set -e
         curl -sSL https://get.rvm.io | bash
