--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -15,18 +15,22 @@ jobs:
       env:
         NO_COVERAGE_REPORT: 1
       run: |
+        set -e
         curl -sSL https://get.rvm.io | bash
         source /Users/runner/.rvm/scripts/rvm
+        set -x
         brew install postgis
         brew services restart postgresql
         brew install imagemagick
         brew install tesseract
         brew install node
         git clone https://github.com/SpeciesFileGroup/taxonworks.git
+        set +x
         cd taxonworks
         rvm install $(cat .ruby-version)
         cd .
         ruby -v
+        set -x
         gem install bundler
         bundle
         npm install
