--- a/.github/workflows/ubuntu_18.04.yml
+++ b/.github/workflows/ubuntu_18.04.yml
@@ -1,8 +1,5 @@
 name: Ubuntu 18.04
 on:
-  push:
-    branches:
-      - test-instructions
   schedule:
     - cron: '0 3 * * 6'  
 jobs:
@@ -19,8 +16,6 @@ jobs:
       run: |
         sudo apt purge postgresql* postgis* -y # For CI only
         set -e
-        curl -sSL https://get.rvm.io | bash
-        source /home/runner/.rvm/scripts/rvm
         set -x
         sudo apt update -y && sudo apt dist-upgrade -y
         echo "deb [arch=amd64] http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -cs)-pgdg main" | sudo tee -a /etc/apt/sources.list.d/pgdg.list
@@ -37,11 +32,11 @@ jobs:
         sudo -u postgres createuser -s -d -w taxonworks_development # Replaced -P with -w since prompt cannot be answered in this context
         sudo sed -i.bak 's/local\s*all\s*all\s*peer/local all all trust/'  /etc/postgresql/12/main/pg_hba.conf
         sudo service postgresql restart
-        set +x
         curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
         sudo apt-get install -y build-essential nodejs
         gpg --keyserver hkp://keyserver.ubuntu.com --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB
         curl -sSL https://get.rvm.io | bash -s stable --ruby
+        source /home/runner/.rvm/scripts/rvm
         mkdir Projects
         cd Projects
         git clone https://github.com/SpeciesFileGroup/taxonworks.git
@@ -49,6 +44,7 @@ jobs:
         rvm reload # For CI only
         rvm install $(cat .ruby-version)
         cd . # Refreshes rvm to pick up recently installed ruby above
+        ruby -v
         gem install bundler
         bundle
         npm install
