--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -1,9 +1,20 @@
 name: MacOS
 on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
   schedule:
-    - cron: '0 3 * * 6'  
+    - cron: '0 3 * * 6'
 jobs:
   install:
+    if: |
+      github.event_name == 'schedule' ||
+      contains(github.event.head_commit.message, '[install all]') ||
+      contains(github.event.head_commit.message, '[install macos]')
+
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
