--- a/.github/workflows/ubuntu_18.04.yml
+++ b/.github/workflows/ubuntu_18.04.yml
@@ -4,6 +4,12 @@ on:
     - cron: '0 3 * * 6'  
 jobs:
   install:
+    if: |
+      github.event_name == 'schedule' ||
+      contains(github.event.head_commit.message, '[install all]') ||
+      contains(github.event.head_commit.message, '[install ubuntu]') ||
+    contains(github.event.head_commit.message, '[install ubuntu 18.04]')
+
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
