Upgrading to ruby 3.0

--- a/.github/workflows/ubuntu_20.04.yml
+++ b/.github/workflows/ubuntu_20.04.yml
@@ -1,7 +1,13 @@
 name: Ubuntu 20.04
 on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
   schedule:
-    - cron: '0 3 * * 6'  
+    - cron: '0 3 * * 6'
 jobs:
   install:
     if: |
