Commit message not available in PRs, enabling builds for any PR temporarily

--- a/.github/workflows/ubuntu_18.04.yml
+++ b/.github/workflows/ubuntu_18.04.yml
@@ -12,7 +12,7 @@ jobs:
   install:
     if: |
       (
-        github.event_name == 'schedule' ||
+        github.event_name == 'schedule' || github.event_name == 'pull_request' ||
         contains(github.event.head_commit.message, '[install all]') ||
         contains(github.event.head_commit.message, '[install ubuntu]') ||
         contains(github.event.head_commit.message, '[install ubuntu 18.04]')
