Install Firefox manually for CI [install ubuntu 22.04]

--- a/.github/workflows/ubuntu_22.04.yml
+++ b/.github/workflows/ubuntu_22.04.yml
@@ -29,6 +29,8 @@ jobs:
         NO_COVERAGE_REPORT: 1
       run: |
         sudo apt purge postgresql* postgis* -y # For CI only
+        curl -sL 'https://download.mozilla.org/?product=firefox-latest-ssl&os=linux64&lang=en-US' | \
+        sudo tar -xjf - -C /usr/bin # Also for CI only, regular Ubuntu Desktop install comes with Firefox from Snapcraft
         set -e
         set -x
         sudo apt update -y && sudo apt dist-upgrade -y
