--- a/.github/workflows/ubuntu_22.04.yml
+++ b/.github/workflows/ubuntu_22.04.yml
@@ -13,6 +13,7 @@ jobs:
   install:
     if: |
       (
+        github.event_name == 'workflow_dispatch' ||
         github.event_name == 'schedule' ||
         contains(github.event.head_commit.message, '[install all]') ||
         contains(github.event.head_commit.message, '[install ubuntu]') ||
